# dataapi-plugin-sdk

./: pom.xml  readme.md
cpp/: CMakeCache.txt  CMakeLists.txt  README.md  base_plugin.cpp  base_plugin.h  command_result.cpp  command_result.h  example_main.cpp  example_plugin.cpp  example_plugin.h  plugin_config.cpp  plugin_config.h  plugin_info.cpp  plugin_info.h  plugin_sdk.h
python/: __init__.py  base_plugin.py  command_result.py  example_plugin.py  example_usage.py  grpc_client.py  plugin_config.py  plugin_info.py  plugin_sdk.py  plugin_service_pb2.py  plugin_service_pb2_grpc.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: base_plugin.rs  command_result.rs  example_plugin.rs  lib.rs  main.rs  plugin_config.rs  plugin_info.rs  plugin_sdk.rs
src/main/java/com/owiseman/dataapi/plugins/sdk/: CommandResult.java  PluginConfig.java  PluginInfo.java  PluginSDK.java
src/main/proto/: plugin_service.proto
